--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
 
 main {
     height: 850px;
-    background-image: url(https://github.com/CODeNiNjaX00/Movie-Website/blob/main/img/1.jpg);
+    background-image: url(https://imgur.com/a/HNcLceF);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
