--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
 
 main {
     height: 850px;
-    background-image: url(https://imgur.com/a/HNcLceF);
+    background-image: url(https://i.imgur.com/nfrWmIR.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
