--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
 
 main {
     height: 850px;
-    background-image: url(https://i.imgur.com/nfrWmIR.jpeg);
+    background-image: url(https://images.hdqwalls.com/wallpapers/black-widow-2020-movie-4k-poster-3m.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
